Text component + test + storybook demo

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
+    "types": ["@testing-library/jest-dom"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"],
+      "@components": ["components"]
+    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
