new chip component added

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,9 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"],
-      "@components": ["components"]
+      "@components": ["components"],
+      "@hooks": ["hooks"],
+      "@sections": ["sections"]
     },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
